--- a/Resources/ad/ad.html
+++ b/Resources/ad/ad.html
@@ -6,12 +6,20 @@
 			margin:0;
 			padding:0;
 		}
+		html,body{
+			width:320px;
+		}
+		#ad_content{
+			width:320px;
+		}
 	</style>
 </head>
 <body>
+<div id="ad_content">
 <script type="text/javascript">
 var nend_params = {"media":1717,"site":19134,"spot":29303,"type":1,"oriented":2};
 </script>
 <script type="text/javascript" src="http://js1.nend.net/js/nendAdLoader.js"></script>
+</div>
 </body>
 </html>
